--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "bunnyc"
 version = "0.1.0"
 edition = "2021"
+authors = ["Nicholas Stienz <nickstienz@gmail.com>"]
+license = "MIT"
+readme = "README.md"
+repository = "https://github.com/Nighthawk149149/bunnyc"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
