--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "bunnyc"
 version = "0.1.1"
 edition = "2021"
 authors = ["Nicholas Stienz <nickstienz@gmail.com>"]
-license = "MIT"
+license = "GPL-3.0-only"
 readme = "README.md"
 repository = "https://github.com/Nighthawk149149/bunnyc"
 
